--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "live-server": "^1.2.1"
+    "0g": "^0.0.9",
+    "live-server": "^1.1.0",
+    "npm": "^8.15.0"
   }
 }
